second commit corrected error and set background image for the section and content added.the content are aligned center by style the section and the probem  in the galaxy fold device that the content not fullly visible is solved by adding padding to the header.

--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,35 @@
-html,body{
-    width:100%;
-    height:100%;
+body{
     margin:0;
-    padding:0;
-   
-
+}
+h1{
+    font-family:cursive ;
+    font-weight: bolder;
+    font-size: 6em;
+    color:white;
+    text-align: center;
 }
 
-header{
-    background: #13110e;
-    width:100%;
-    
-    
-    
-}
 .logo-text{
     text-decoration: none;
-    font-family: 'Brush Script MT', cursive;
-    font-weight: 200;
     color: white;
-    font-size: 4em;
+    font-family:cursive;
+    font-size: 35px;
 }
-
-.loader-wrapper{
-    z-index: 99999;
-    width:100%;
-    height:100%;
-    background: rgb(241, 119, 4);
-    display: flex;
-    top: 0;
-    left:0;
-    right:0;
-    bottom: 0;
-    justify-content:center;
-    align-items:center;
-    position: absolute;
-
-}
-.navs{
-    background: #13110e;
-    
-}
-.navlink:hover{
-    color:orange !important;
-}
-.navlink:onclick{
-    color:orange !important;
-}
-
-.bg-image{
-    height: 60vh;
-    background-size: cover;
-    background-image:url(https://krishijagran.com/media/8513/501-fish-farming-software-erp-fm.jpg);
+.section1{
+    background-image: url(https://foodprint.org/wp-content/uploads/2020/10/AdobeStock_183594241_1920x960-1.jpg);
     height:100vh;
     background-repeat: no-repeat;
-    position: relative;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
     
 }
-@media(max-width:768x) {
-    .bg-image{
-        min-height:30vh;
-    }
-    
+p{
+    font-family:cursive ;
+    color:white;
+    text-align: center;
 }
-    
+
